# tshirts

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tshirts/: __init__.py  ai.py  cli.py  github_client.py  mcp.py
tests/: conftest.py  test_ai.py  test_cli.py  test_error_handling.py  test_github_client.py  test_integration.py  test_json_schema.py  test_mcp.py  test_prompts.py  test_stdin_multiline.py
