[project]
name = "tshirts"
version = "0.1.0"
description = "A tool for breaking down GitHub issues into smaller pieces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pygithub>=2.1.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
tshirts = "tshirts.cli:main"
tshirts-mcp = "tshirts.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tshirts"]

[tool.hatch.build.targets.sdist]
include = ["src/tshirts"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
